modified:   Sprint5/Task0.ipynb 	modified:   Sprint5/Task1.ipynb 	modified:   Sprint5/Task2.ipynb 	modified:   Sprint5/Task3.ipynb

--- a/Sprint5/Task0.ipynb
+++ b/Sprint5/Task0.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -225,8 +225,107 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Модель: Model S, Производитель: Tesla\n",
+      "Количество дверей: 4\n",
+      "\n",
+      "Модель: Mountain Explorer, Производитель: Giant\n",
+      "Имеет носитель: True\n",
+      "\n",
+      "Найденый траснпорт:\n",
+      "Модель: Model S, Производитель: Tesla\n",
+      "Количество дверей: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public Transport(string model, string manufacturer)\n",
+    "    {\n",
+    "        Model = model;\n",
+    "        Manufacturer = manufacturer;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Модель: {Model}, Производитель: {Manufacturer}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Transport\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public Car(string model, string manufacturer, int numberOfDoors)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        NumberOfDoors = numberOfDoors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Количество дверей: {NumberOfDoors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bike : Transport\n",
+    "{\n",
+    "    public bool HasCarrier { get; set; }\n",
+    "\n",
+    "    public Bike(string model, string manufacturer, bool hasCarrier)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        HasCarrier = hasCarrier;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Имеет носитель: {HasCarrier}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "List<Transport> transportList = new List<Transport>();\n",
+    "\n",
+    "transportList.Add(new Car(\"Model S\", \"Tesla\", 4));\n",
+    "transportList.Add(new Bike(\"Mountain Explorer\", \"Giant\", true));\n",
+    "\n",
+    "foreach (var transport in transportList)\n",
+    "{\n",
+    "    transport.DisplayInfo();\n",
+    "    Console.WriteLine();\n",
+    "}\n",
+    "\n",
+    "\n",
+    "Dictionary<string, Transport> transportDictionary = new Dictionary<string, Transport>();\n",
+    "\n",
+    "transportDictionary.Add(\"TSL123\", new Car(\"Model S\", \"Tesla\", 4));\n",
+    "transportDictionary.Add(\"BIK456\", new Bike(\"Mountain Explorer\", \"Giant\", true));\n",
+    "\n",
+    "if (transportDictionary.TryGetValue(\"TSL123\", out Transport foundTransport))\n",
+    "{\n",
+    "    Console.WriteLine(\"Найденый траснпорт:\");\n",
+    "    foundTransport.DisplayInfo();\n",
+    "}\n",
+    "else\n",
+    "{\n",
+    "    Console.WriteLine(\"Транспорт не найден\");\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
