--- a/Sprint5/Task1.ipynb
+++ b/Sprint5/Task1.ipynb
@@ -147,10 +147,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Was duplicate car added? False\n",
+      "Model: Model S, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n",
+      "\n",
+      "Model: Model 3, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n",
+      "\n",
+      "Model: Mountain Explorer, Manufacturer: Giant\n",
+      "Has Carrier: True\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public Transport(string model, string manufacturer)\n",
+    "    {\n",
+    "        Model = model;\n",
+    "        Manufacturer = manufacturer;\n",
+    "    }\n",
+    "\n",
+    "    public override bool Equals(object obj)\n",
+    "    {\n",
+    "        if (obj is Transport transport)\n",
+    "        {\n",
+    "            return Model == transport.Model && Manufacturer == transport.Manufacturer;\n",
+    "        }\n",
+    "        return false;\n",
+    "    }\n",
+    "\n",
+    "    public override int GetHashCode()\n",
+    "    {\n",
+    "        return HashCode.Combine(Model, Manufacturer);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Model: {Model}, Manufacturer: {Manufacturer}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Transport\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public Car(string model, string manufacturer, int numberOfDoors)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        NumberOfDoors = numberOfDoors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Number of Doors: {NumberOfDoors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bike : Transport\n",
+    "{\n",
+    "    public bool HasCarrier { get; set; }\n",
+    "\n",
+    "    public Bike(string model, string manufacturer, bool hasCarrier)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        HasCarrier = hasCarrier;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Has Carrier: {HasCarrier}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "HashSet<Transport> transportSet = new HashSet<Transport>();\n",
+    "\n",
+    "\n",
+    "var car1 = new Car(\"Model S\", \"Tesla\", 4);\n",
+    "var car2 = new Car(\"Model 3\", \"Tesla\", 4);\n",
+    "var bike1 = new Bike(\"Mountain Explorer\", \"Giant\", true);\n",
+    "\n",
+    "transportSet.Add(car1);\n",
+    "transportSet.Add(car2);\n",
+    "transportSet.Add(bike1);\n",
+    "\n",
+    "var duplicateCar = new Car(\"Model S\", \"Tesla\", 4);\n",
+    "bool isAdded = transportSet.Add(duplicateCar);\n",
+    "\n",
+    "Console.WriteLine($\"Was duplicate car added? {isAdded}\"); \n",
+    "\n",
+    "foreach (var transport in transportSet)\n",
+    "{\n",
+    "    transport.DisplayInfo();\n",
+    "    Console.WriteLine();\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +278,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   }
