--- a/Sprint5/Task2.ipynb
+++ b/Sprint5/Task2.ipynb
@@ -187,10 +187,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Model S, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n",
+      "Model: Speedster, Manufacturer: Giant\n",
+      "Has Carrier: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "public delegate void DisplayDelegate();\n",
+    "\n",
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public Transport(string model, string manufacturer)\n",
+    "    {\n",
+    "        Model = model;\n",
+    "        Manufacturer = manufacturer;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Model: {Model}, Manufacturer: {Manufacturer}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Transport\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public Car(string model, string manufacturer, int numberOfDoors)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        NumberOfDoors = numberOfDoors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Number of Doors: {NumberOfDoors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bike : Transport\n",
+    "{\n",
+    "    public bool HasCarrier { get; set; }\n",
+    "\n",
+    "    public Bike(string model, string manufacturer, bool hasCarrier)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        HasCarrier = hasCarrier;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Has Carrier: {HasCarrier}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car car = new Car(\"Model S\", \"Tesla\", 4);\n",
+    "Bike bike = new Bike(\"Speedster\", \"Giant\", true);\n",
+    "\n",
+    "DisplayDelegate displayCar = car.DisplayInfo;\n",
+    "DisplayDelegate displayBike = bike.DisplayInfo;\n",
+    "\n",
+    "displayCar();\n",
+    "displayBike();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Model S, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n",
+      "Model: Model 3, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "using System.Linq;\n",
+    " \n",
+    "List<Transport> transports = new List<Transport>\n",
+    "{\n",
+    "    new Car(\"Model S\", \"Tesla\", 4),\n",
+    "    new Bike(\"Speedster\", \"Giant\", true),\n",
+    "    new Car(\"Model 3\", \"Tesla\", 4),\n",
+    "};\n",
+    "\n",
+    "var teslaCars = transports.OfType<Car>().Where(c => c.Manufacturer == \"Tesla\");\n",
+    "\n",
+    "foreach (var car in teslaCars)\n",
+    "{\n",
+    "    car.DisplayInfo();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model updated to New Model\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public delegate void TransportHandler(string message);\n",
+    "    public event TransportHandler TransportUpdated;\n",
+    "\n",
+    "    public void UpdateModel(string newModel)\n",
+    "    {\n",
+    "        Model = newModel;\n",
+    "        TransportUpdated?.Invoke($\"Model updated to {newModel}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Transport transport = new Transport { Model = \"Old Model\", Manufacturer = \"Generic\" };\n",
+    "transport.TransportUpdated += OnTransportUpdated;\n",
+    "transport.UpdateModel(\"New Model\");\n",
+    "\n",
+    "\n",
+    "static void OnTransportUpdated(string message)\n",
+    "{\n",
+    "    Console.WriteLine(message);\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -206,7 +367,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   }
